--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,7 @@ yarn-error.log
 # Sistema
 Thumbs.db
 Desktop.ini
-.DS_Store 
+.DS_Store instance/app.db
+backend/fix_admin.py
+backend/db_update.py
+backend/recreate_db.py
