--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,5 @@ flask-jwt-extended==4.5.3
 python-jose==3.3.0
 requests==2.31.0
 authlib==1.2.1
-Werkzeug==2.3.7 
+Werkzeug==2.3.7
+psycopg2-binary==2.9.10 
