fix: ajusta referências para produção e prepara build para Vercel

--- a/frontend-adm/tsconfig.json
+++ b/frontend-adm/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "verbatimModuleSyntax": false,
     "noImplicitAny": false,
-    "allowJs": true
+    "allowJs": true,
+    "noUnusedLocals": false
   }
 }
