--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vidashield-v2",
   "version": "2.0.0",
-  "type": "module",
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
